--- a/src/sass/_variables.sass
+++ b/src/sass/_variables.sass
@@ -4,7 +4,8 @@
 
 $blue : rgb(33, 206, 233)
 $gray: #a7a7a7
+$dark-blue :rgb(4, 9, 29)
 
 
-$custom-colors: ("blue":$blue,"gray":$gray)
+$custom-colors: ("blue":$blue,"gray":$gray,"dark-blue":$dark-blue)
 $theme-colors:map-merge($theme-colors,$custom-colors)
